tests/models/snapshots/animals/can_fetch_most_valuable@animals.snap
---
source: tests/models/animals.rs
assertion_line: 310
expression: result
---
Ok(
    [
        AnimalResponse {
            id: 114,
            pid: d9dfbd4b-cccc-43cd-bca9-2eeafab929ae,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC006",
            name: "Bruno",
            specie_name: "cattle",
            breed_name: "Aberdeen Angus",
            date_of_birth: Some(
                2022-09-05,
            ),
            gender: "male",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2022-11-10,
            ),
            purchase_price: Some(
                75000.00,
            ),
            weight_at_birth: Some(
                35.50,
            ),
            current_weight: Some(
                875.25,
            ),
            notes: Some(
                "Secondary breeing bull, black coat",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2022-11-11T09:30:00+00:00,
            updated_at: 2024-12-16T14:45:00+00:00,
        },
        AnimalResponse {
            id: 118,
            pid: fb656171-1acc-476f-9e8d-d1abbc47bc50,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC010",
            name: "Duke",
            specie_name: "cattle",
            breed_name: "Hereford",
            date_of_birth: Some(
                2022-06-15,
            ),
            gender: "male",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "sold",
            purchase_date: Some(
                2022-08-10,
            ),
            purchase_price: Some(
                70000.00,
            ),
            weight_at_birth: Some(
                36.75,
            ),
            current_weight: Some(
                950.25,
            ),
            notes: Some(
                "Sold to breeding program at neighboring farm",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2022-08-11T08:30:00+00:00,
            updated_at: 2024-05-20T15:10:00+00:00,
        },
        AnimalResponse {
            id: 134,
            pid: 92eaee70-d07c-4d73-bec6-4e64a5beffc3,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC015",
            name: "Betty",
            specie_name: "cattle",
            breed_name: "Friesian",
            date_of_birth: Some(
                2022-07-15,
            ),
            gender: "female",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-06-22,
            ),
            purchase_price: Some(
                66000.75,
            ),
            weight_at_birth: Some(
                39.25,
            ),
            current_weight: Some(
                582.65,
            ),
            notes: Some(
                "Excellent heavy milk producer, calm temperament. Fastest grower",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-06-22T10:15:00+00:00,
            updated_at: 2024-12-15T14:30:00+00:00,
        },
        AnimalResponse {
            id: 103,
            pid: d909e761-36da-4062-ae78-abba4f7c1103,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC003",
            name: "Ferdinand",
            specie_name: "cattle",
            breed_name: "Jersey",
            date_of_birth: Some(
                2022-08-20,
            ),
            gender: "male",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2022-10-05,
            ),
            purchase_price: Some(
                65000.00,
            ),
            weight_at_birth: Some(
                32.25,
            ),
            current_weight: Some(
                625.75,
            ),
            notes: Some(
                "Breeding bull, excellent lineage",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-10-06T08:45:00+00:00,
            updated_at: 2024-12-10T11:30:00+00:00,
        },
        AnimalResponse {
            id: 131,
            pid: 41c174d0-d8f0-4039-99a9-5027372c5d37,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC012",
            name: "Chloe",
            specie_name: "cattle",
            breed_name: "Friesian",
            date_of_birth: Some(
                2022-05-15,
            ),
            gender: "female",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-06-22,
            ),
            purchase_price: Some(
                65000.00,
            ),
            weight_at_birth: Some(
                38.50,
            ),
            current_weight: Some(
                575.25,
            ),
            notes: Some(
                "Excellent heavy milk producer, calm temperament.",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-06-22T10:15:00+00:00,
            updated_at: 2024-12-15T14:30:00+00:00,
        },
        AnimalResponse {
            id: 133,
            pid: 2d3fc5b0-9726-45d9-af58-61e818e7533f,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC014",
            name: "Berta",
            specie_name: "cattle",
            breed_name: "Friesian",
            date_of_birth: Some(
                2022-06-15,
            ),
            gender: "female",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-06-22,
            ),
            purchase_price: Some(
                63040.00,
            ),
            weight_at_birth: Some(
                38.00,
            ),
            current_weight: Some(
                595.15,
            ),
            notes: Some(
                "Grade A heavy milk producer, calm temperament.",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-06-22T10:15:00+00:00,
            updated_at: 2024-12-15T14:30:00+00:00,
        },
        AnimalResponse {
            id: 132,
            pid: e15bef44-4b4e-4df8-9787-bff80e50e85e,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC013",
            name: "Charlotte",
            specie_name: "cattle",
            breed_name: "Friesian",
            date_of_birth: Some(
                2022-08-16,
            ),
            gender: "female",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-06-22,
            ),
            purchase_price: Some(
                63005.00,
            ),
            weight_at_birth: Some(
                39.50,
            ),
            current_weight: Some(
                585.25,
            ),
            notes: Some(
                "Excellent heavy milk producer, calm temperament and a curious nature.",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-06-22T10:15:00+00:00,
            updated_at: 2024-12-15T14:30:00+00:00,
        },
        AnimalResponse {
            id: 116,
            pid: 348d1e0e-f76c-4253-bd44-5140ef25530a,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC008",
            name: "Oreo",
            specie_name: "cattle",
            breed_name: "Friesian",
            date_of_birth: Some(
                2023-08-15,
            ),
            gender: "female",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-10-05,
            ),
            purchase_price: Some(
                55000.00,
            ),
            weight_at_birth: Some(
                32.50,
            ),
            current_weight: Some(
                575.00,
            ),
            notes: Some(
                "Black and white pattern, high milk yield potential",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2023-10-06T10:15:00+00:00,
            updated_at: 2024-12-14T13:40:00+00:00,
        },
        AnimalResponse {
            id: 117,
            pid: e497b08f-0624-4bf9-bbca-98b010ff2a3d,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC009",
            name: "Midnight",
            specie_name: "cattle",
            breed_name: "Aberdeen Angus",
            date_of_birth: Some(
                2023-07-20,
            ),
            gender: "female",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-09-15,
            ),
            purchase_price: Some(
                50000.00,
            ),
            weight_at_birth: Some(
                33.25,
            ),
            current_weight: Some(
                525.50,
            ),
            notes: Some(
                "Solid black coat, excellent beef conformation",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2023-09-16T09:20:00+00:00,
            updated_at: 2024-12-12T16:35:00+00:00,
        },
        AnimalResponse {
            id: 113,
            pid: 5a6efa8e-8cf3-46fb-9fe6-41900aca729b,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC005",
            name: "Spot",
            specie_name: "cattle",
            breed_name: "Jersey",
            date_of_birth: Some(
                2022-11-12,
            ),
            gender: "female",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-01-15,
            ),
            purchase_price: Some(
                48500.00,
            ),
            weight_at_birth: Some(
                29.75,
            ),
            current_weight: Some(
                410.50,
            ),
            notes: Some(
                "Distinctive white patch on forehead, high milk production",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2023-01-16T10:45:00+00:00,
            updated_at: 2024-12-17T15:20:00+00:00,
        },
        AnimalResponse {
            id: 101,
            pid: b2bd6270-8bec-42ce-99ff-d0eb1a076221,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC001",
            name: "Daisy",
            specie_name: "cattle",
            breed_name: "Jersey",
            date_of_birth: Some(
                2023-05-15,
            ),
            gender: "female",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-06-20,
            ),
            purchase_price: Some(
                45000.00,
            ),
            weight_at_birth: Some(
                28.50,
            ),
            current_weight: Some(
                375.25,
            ),
            notes: Some(
                "Excellent milk producer, calm temperament",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-06-21T10:15:00+00:00,
            updated_at: 2024-12-15T14:30:00+00:00,
        },
        AnimalResponse {
            id: 102,
            pid: 62197c29-a2dd-4591-a4d0-92f6d7099760,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            tag_id: "AC002",
            name: "Buttercup",
            specie_name: "cattle",
            breed_name: "Jersey",
            date_of_birth: Some(
                2023-06-10,
            ),
            gender: "female",
            parent_female_name: None,
            parent_female_tag_id: None,
            parent_female_id: None,
            parent_male_name: None,
            parent_male_tag_id: None,
            parent_male_id: None,
            status: "active",
            purchase_date: Some(
                2023-07-15,
            ),
            purchase_price: Some(
                42500.00,
            ),
            weight_at_birth: Some(
                27.75,
            ),
            current_weight: Some(
                368.50,
            ),
            notes: Some(
                "Good health history, daughter of prize-winning cow",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-07-16T09:20:00+00:00,
            updated_at: 2024-12-14T16:45:00+00:00,
        },
    ],
)
